replay screen ui overhaul, relative and gap to leader and if it fails in live it falls back on distance estimates, fixes to pit lane status as they were using different data streams and out of sync, more fixes to time syncing overall on replays as well

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --color-surface-2: #1f1f2b;
 }
 
-button {
+button:not(:disabled) {
   cursor: pointer;
 }
 
